GNOME Bugzilla – Bug 669830
eog fails to display a jpg image - and just hangs
Last modified: 2012-06-10 13:41:20 UTC
Created attachment 207288 [details] The image eog hangs on - lena If the attached image is opened with eog, it just hangs. It doesn't render or display the image, but just a grey background. Other viewers and other software (xv, gimp, xine, firefox) do not show any problems opening the attached image. No error message is generated, no output is shown.
Hi Thomas, version 2.30.x is too old and not supported anymore, but I can still reproduce this with 3.2.1. Bumping version number.
Does eog's window actually appear for you? Because that's the behaviour I get with 3.3.5. Opening the image in a running instance of eog works fine.
In 2.30, eog will not open the image even in a running instance.
Any news on this bug? According to my research, the bug is due to a race condition in eog_image_real_load, though I do not quite understand the program logic there. If no additional application markers are present, the code runs into eog_image_size_prepared *before* entering eog_image_set_exif_data(), and thus the latter function finds the image dimensions already well-prepared. If additional application markers are present, eog_image_size_prepared is *also* called, but *after* entering eog_image_set_exif_data(), and thus the code never goes into the eog_image_emit_size_prepared(). The code should really check at the end whether the image size was actually signalled at least once, and if not, trigger the signal then. Could someone please fix this problem? Thanks!
Thanks, for investigating it. I fixed it in the EogWindow code as it was making the ScrollView misbehave as well and really fixing the image loading code needs an in depth review of it (especially regarding image autorotation). commit b52d2c1c6569d4c9106ebb4dc7218c9e1981baa9 Author: Felix Riemann <> Date: Sun Jun 10 15:34:26 2012 +0200 EogWindow: Make sure the window is realized after loading an image Otherwise it could happen that no window is shown if the fist image doesn't correctly emit its size-prepared signal correctly. https://bugzilla.gnome.org/show_bug.cgi?id=669830 --- This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.