EogWindow: Make sure the window is realized after loading an image

Otherwise it could happen that no window is shown if the fist image
doesn't correctly emit its size-prepared signal correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=669830